--- a/yahoo-prices.cabal
+++ b/yahoo-prices.cabal
@@ -25,6 +25,8 @@ library
                        bytestring,
                        cassava,
                        lens,
+                       time,
+                       vector,
                        wreq
   hs-source-dirs:      src
   default-language:    Haskell2010
