--- a/yahoo-prices.cabal
+++ b/yahoo-prices.cabal
@@ -18,7 +18,7 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
 library
-  exposed-modules:     MyLib
+  exposed-modules:     Web.Data.Yahoo.API
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
