Structuring API, part I

--- a/yahoo-prices.cabal
+++ b/yahoo-prices.cabal
@@ -19,7 +19,8 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     Web.Data.Yahoo.API
-  -- other-modules:
+  other-modules:       Web.Data.Yahoo.Time,
+                       Web.Data.Yahoo.Request
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14,
                        bytestring,
