--- a/yahoo-prices.cabal
+++ b/yahoo-prices.cabal
@@ -11,7 +11,7 @@ version:             0.1.0.0
 license:             MIT
 license-file:        LICENSE
 author:              Alojzy Leszcz
-maintainer:          <>
+maintainer:          alojzy.leszcz@gmail.com
 -- copyright:
 category:            Web
 build-type:          Simple
@@ -45,5 +45,6 @@ test-suite yahoo-prices-test
   default-language:    Haskell2010
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             MyLibTest.hs
-  build-depends:       base >=4.13 && <4.14
+  main-is:             Tests.hs
+  build-depends:       base >=4.13 && <4.14,
+                       hspec
