--- a/yahoo-prices.cabal
+++ b/yahoo-prices.cabal
@@ -4,18 +4,19 @@ cabal-version:       >=1.10
 -- http://haskell.org/cabal/users-guide/
 
 name:                yahoo-prices
-version:             0.1.0.0
--- synopsis:
--- description:
--- bug-reports:
+version:             0.0.1.0
+synopsis:            A wrapper around Yahoo API for downloading market data.
+bug-reports:         https://github.com/bratfizyk/yahoo-finance/issues
 license:             MIT
 license-file:        LICENSE
 author:              Alojzy Leszcz
 maintainer:          alojzy.leszcz@gmail.com
--- copyright:
 category:            Web
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
+Source-repository head
+  type:     git
+  location: https://github.com/bratfizyk/yahoo-finance
 
 library
   exposed-modules:     Web.Data.Yahoo.API
@@ -32,14 +33,14 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-executable yahoo-prices
-  main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >=4.13 && <4.14, 
-                       yahoo-prices
-  -- hs-source-dirs:
-  default-language:    Haskell2010
+-- executable yahoo-prices
+--   main-is:             Main.hs
+--   -- other-modules:
+--   -- other-extensions:
+--   build-depends:       base >=4.13 && <4.14, 
+--                        yahoo-prices
+--   -- hs-source-dirs:
+--   default-language:    Haskell2010
 
 test-suite yahoo-prices-test
   default-language:    Haskell2010
@@ -47,4 +48,5 @@ test-suite yahoo-prices-test
   hs-source-dirs:      test
   main-is:             Tests.hs
   build-depends:       base >=4.13 && <4.14,
-                       hspec
+                       hspec,
+                       yahoo-prices
