--- a/yahoo-prices.cabal
+++ b/yahoo-prices.cabal
@@ -19,10 +19,9 @@ Source-repository head
   location: https://github.com/bratfizyk/yahoo-finance
 
 library
-  exposed-modules:     Web.Data.Yahoo.API
-  other-modules:       Web.Data.Yahoo.Utils,
-                       Web.Data.Yahoo.Request
-  -- other-extensions:
+  exposed-modules:     Web.Data.Yahoo.API,
+                       Web.Data.Yahoo.Time
+  other-modules:       Web.Data.Yahoo.Request
   build-depends:       base >=4.13 && <4.14,
                        bytestring,
                        cassava,
@@ -33,20 +32,14 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
--- executable yahoo-prices
---   main-is:             Main.hs
---   -- other-modules:
---   -- other-extensions:
---   build-depends:       base >=4.13 && <4.14, 
---                        yahoo-prices
---   -- hs-source-dirs:
---   default-language:    Haskell2010
-
 test-suite yahoo-prices-test
   default-language:    Haskell2010
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Tests.hs
+  other-modules:       Gen
   build-depends:       base >=4.13 && <4.14,
                        hspec,
-                       yahoo-prices
+                       yahoo-prices,
+                       time,
+                       QuickCheck
