--- a/yahoo-prices.cabal
+++ b/yahoo-prices.cabal
@@ -21,8 +21,8 @@ Source-repository head
 library yahoo-prices-utils
   exposed-modules:     Web.Data.Yahoo.Utils,
                        Web.Data.Yahoo.Request
-  build-depends:       base >= 4.13 && < 4.14,
-                       time >= 1.9.3 && < 1.10
+  build-depends:       base,
+                       time
   hs-source-dirs:      src/utils
   default-language:    Haskell2010
 
@@ -46,10 +46,10 @@ test-suite yahoo-prices-test
   hs-source-dirs:      test
   main-is:             Tests.hs
   other-modules:       Gen
-  build-depends:       base >=4.13 && <4.14,
-                       bytestring >= 0.10.10 && < 0.11,
+  build-depends:       base,
+                       bytestring,
                        hspec,
                        QuickCheck,
-                       time >= 1.9.3 && < 1.10,
+                       time,
                        yahoo-prices,
                        yahoo-prices-utils
