--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -1,40 +1,15 @@
 name: Haskell CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+on: [push]
+name: build
 jobs:
-  build:
-
+  runhaskell:
+    name: Yahoo Prices
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
-      with:
-        ghc-version: '9.0.1'
-        cabal-version: '3.4'
-
-    - name: Cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-cabal
-      with:
-        path: ~/.cabal
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-
-    - name: Install dependencies
-      run: |
-        cabal new-update
-        cabal new-build --only-dependencies --enable-tests --enable-benchmarks
-    - name: Build
-      run: cabal new-build --enable-tests --enable-benchmarks all
-    - name: Run tests
-      run: cabal new-test all
+      - uses: actions/checkout@v3
+      - uses: haskell/actions/setup@v2
+        with:
+          ghc-version: '9.0.2'
+          cabal-version: '3.4.0.0'
+      - run: cabal new-build --enable-tests --enable-benchmarks all
